--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "description": "",
   "dependencies": {
     "@prisma/client": "^5.21.0",
+    "body-parser": "^1.20.3",
     "express": "^4.21.1",
     "prisma": "^5.21.0"
   },
   "devDependencies": {
+    "nodemon": "^3.1.7",
     "prettier-plugin-prisma": "^5.0.0"
   }
 }
