--- a/package.json
+++ b/package.json
@@ -3,13 +3,16 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon .\\src\\index.js",
+    "run": "node .\\src\\index.js"
   },
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
     "@prisma/client": "^5.21.0",
+    "axios": "^1.7.7",
     "body-parser": "^1.20.3",
     "express": "^4.21.1",
     "prisma": "^5.21.0"
