--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.7.7",
     "body-parser": "^1.20.3",
     "express": "^4.21.1",
+    "node-cron": "^3.0.3",
     "prisma": "^5.21.0"
   },
   "devDependencies": {
